diferencia/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-diferencia
  labels:
    app: recommendation-diferencia
spec:
  ports:
  - name: http
    port: 8080
  - name: http-admin
    port: 8082
  selector:
    app: recommendation-diferencia
