diferencia/recommendation-master-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-master
  labels:
    app: recommendation-master
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: recommendation
    version: v1
